2002-10-05 garlick
	* More man page updates
	* Updated TODO, moved README to d1oc/Overview.txt, removed Retagging.
	* Removed various outdated scripts in scripts subdir.
	* Added --off_rpc and --hung_rpc options to vpcd for testing.
	* Updated timeouts from 0.3 to 0.5 in icebox3.dev (determined to be
	  safe on MCR).

2002-10-04 garlick
	* Client now performs on and off command if executable is 
	  linked to "on" and "off".  Install links "on", "off", and "pm"
	  in spec file.
	* Set all plug/node state to ST_UNKNOWN prior to status query command.
	* Updated client man page.

2002-10-04 garlick
	* Now properly handles the case of one ice box hanging.
	  (tested with vpcd --bad_response)
	* Don't call action callback from within dev_enqueue_actions
	  (triggers act->cmd != NULL assertion in _act_finish).
	  Error handling was inappropriate anyway - try silently ignoring
	  unimplemented commands, and queuing actions for un-logged-in devices.
	* Client works again (though still minimal)
	* Tagged powerman-1-0-7.

2002-10-02 garlick
	* Created Command data structure to represent what was called
	  a "server action" and moved device action functions to device.c 
	  and got rid of action.[ch]
	* Device actions now execute a callback to the client code rather
	  than call exported functions.
	* Made the status command's hostlist argument optional.

2002-10-02 behlendo
  	* Fixed memory leak in config parsing.  Memory was being malloc'ed
    	  for each line in the config file as it was parsed; pointers to this
    	  memory were not preserved and the memory was never free'd.  These
    	  pointers are now tracked and free'd after scanning completes.

2002-10-02 garlick
	* Changed protocol so query-status is now status and requires an
	  argument, and query-nodes is now nodes.
	* No more server action queue.
	* Device actions notify client when they complete.  A count of 
	  outstanding actions in the client structure is decremented as 